--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -119,6 +119,7 @@
     name: "{{ changedetection_container_network }}"
     driver: bridge
     driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
+  register: changedetection_network_creation_result
 
 - name: Ensure Changedetection.io container network is created via ansible.builtin.command
   when: devture_systemd_docker_base_container_network_creation_method == 'command'
@@ -128,9 +129,9 @@
       {% if devture_systemd_docker_base_ipv6_enabled %}--ipv6{% endif %}
       {{ devture_systemd_docker_base_container_networks_driver_options_string }}
       {{ changedetection_container_network }}
-  register: network_creation_result
-  changed_when: network_creation_result.rc == 0
-  failed_when: network_creation_result.rc != 0 and 'already exists' not in network_creation_result.stderr
+  register: changedetection_network_creation_result
+  changed_when: changedetection_network_creation_result.rc == 0
+  failed_when: changedetection_network_creation_result.rc != 0 and 'already exists' not in changedetection_network_creation_result.stderr
 
 - name: Ensure Changedetection.io systemd service is present
   ansible.builtin.template:
