--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -28,6 +28,7 @@
       community.docker.docker_network:
         name: "{{ changedetection_container_network }}"
         state: absent
+      register: changedetection_network_deletion_result
 
     - name: Ensure Changedetection.io container network does not exist via ansible.builtin.command
       when: devture_systemd_docker_base_container_network_creation_method == 'command'
@@ -35,8 +36,8 @@
         cmd: >-
           {{ devture_systemd_docker_base_host_command_docker }} network rm
           {{ changedetection_container_network }}
-      register: network_deletion_result
-      changed_when: changedetection_container_network in network_deletion_result.stdout
+      register: changedetection_network_deletion_result
+      changed_when: changedetection_container_network in changedetection_network_deletion_result.stdout
 
     - name: Ensure Changedetection.io path does not exist
       ansible.builtin.file:
