--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -23,21 +23,24 @@
         path: "{{ devture_systemd_docker_base_systemd_path }}/{{ changedetection_identifier }}.service"
         state: absent
 
-    - name: Ensure Changedetection.io container network does not exist via community.docker.docker_network
-      when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
-      community.docker.docker_network:
-        name: "{{ changedetection_container_network }}"
-        state: absent
-      register: changedetection_network_deletion_result
+    - name: Ensure Changedetection.io container network does not exist
+      when: changedetection_container_network_deletion_enabled
+      block:
+        - name: Ensure Changedetection.io container network does not exist via community.docker.docker_network
+          when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
+          community.docker.docker_network:
+            name: "{{ changedetection_container_network }}"
+            state: absent
+          register: changedetection_network_deletion_result
 
-    - name: Ensure Changedetection.io container network does not exist via ansible.builtin.command
-      when: devture_systemd_docker_base_container_network_creation_method == 'command'
-      ansible.builtin.command:
-        cmd: >-
-          {{ devture_systemd_docker_base_host_command_docker }} network rm
-          {{ changedetection_container_network }}
-      register: changedetection_network_deletion_result
-      changed_when: changedetection_container_network in changedetection_network_deletion_result.stdout
+        - name: Ensure Changedetection.io container network does not exist via ansible.builtin.command
+          when: devture_systemd_docker_base_container_network_creation_method == 'command'
+          ansible.builtin.command:
+            cmd: >-
+              {{ devture_systemd_docker_base_host_command_docker }} network rm
+              {{ changedetection_container_network }}
+          register: changedetection_network_deletion_result
+          changed_when: changedetection_container_network in changedetection_network_deletion_result.stdout
 
     - name: Ensure Changedetection.io path does not exist
       ansible.builtin.file:
