--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -26,6 +26,7 @@
   with_items:
     - env
     - labels
+  register: changedetection_support_files_result
 
 - name: Ensure Changedetection.io playwright-driver support files installed
   when: changedetection_playwright_driver_enabled | bool
@@ -37,6 +38,7 @@
     group: "{{ changedetection_gid }}"
   with_items:
     - playwright-env
+  register: changedetection_playwright_driver_support_files_result
 
 - name: Run if self-building of Changedetection.io container image is not enabled
   when: "not changedetection_container_image_self_build | bool"
@@ -48,20 +50,20 @@
         source: "{{ 'pull' if ansible_version.major > 2 or ansible_version.minor > 7 else omit }}"
         force_source: "{{ changedetection_container_image_force_pull if ansible_version.major > 2 or ansible_version.minor >= 8 else omit }}"
         force: "{{ omit if ansible_version.major > 2 or ansible_version.minor >= 8 else changedetection_container_image_force_pull }}"
-      register: result
+      register: changedetection_container_image_pull_result
       retries: "{{ devture_playbook_help_container_retries_count }}"
       delay: "{{ devture_playbook_help_container_retries_delay }}"
-      until: result is not failed
+      until: changedetection_container_image_pull_result is not failed
 
     - name: Ensure Changedetection.io container image is pulled via ansible.builtin.command
       when: devture_systemd_docker_base_container_image_pull_method == 'command'
       ansible.builtin.command:
         cmd: "{{ devture_systemd_docker_base_host_command_docker }} pull {{ changedetection_container_image }}"
-      register: result
+      register: changedetection_container_image_pull_result
       retries: "{{ devture_playbook_help_container_retries_count }}"
       delay: "{{ devture_playbook_help_container_retries_delay }}"
-      until: result is not failed
-      changed_when: "'Downloaded newer image' in result.stdout"
+      until: changedetection_container_image_pull_result is not failed
+      changed_when: "'Downloaded newer image' in changedetection_container_image_pull_result.stdout"
 
 - name: Run if self-building of Changedetection.io container image is enabled
   when: "changedetection_container_image_self_build | bool"
@@ -97,20 +99,20 @@
     source: "{{ 'pull' if ansible_version.major > 2 or ansible_version.minor > 7 else omit }}"
     force_source: "{{ changedetection_playwright_driver_container_image_force_pull if ansible_version.major > 2 or ansible_version.minor >= 8 else omit }}"
     force: "{{ omit if ansible_version.major > 2 or ansible_version.minor >= 8 else changedetection_playwright_driver_container_image_force_pull }}"
-  register: result
+  register: changedetection_playwright_driver_container_image_pull_result
   retries: "{{ devture_playbook_help_container_retries_count }}"
   delay: "{{ devture_playbook_help_container_retries_delay }}"
-  until: result is not failed
+  until: changedetection_playwright_driver_container_image_pull_result is not failed
 
 - name: Ensure Changedetection.io playwright-driver container image is pulled via ansible.builtin.command
   when: devture_systemd_docker_base_container_image_pull_method == 'command'
   ansible.builtin.command:
     cmd: "{{ devture_systemd_docker_base_host_command_docker }} pull {{ changedetection_playwright_driver_container_image }}"
-  register: result
+  register: changedetection_playwright_driver_container_image_pull_result
   retries: "{{ devture_playbook_help_container_retries_count }}"
   delay: "{{ devture_playbook_help_container_retries_delay }}"
-  until: result is not failed
-  changed_when: "'Downloaded newer image' in result.stdout"
+  until: changedetection_playwright_driver_container_image_pull_result is not failed
+  changed_when: "'Downloaded newer image' in changedetection_playwright_driver_container_image_pull_result.stdout"
 
 - name: Ensure Changedetection.io container network is created via community.docker.docker_network
   when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
@@ -138,6 +140,7 @@
     src: "{{ role_path }}/templates/systemd/changedetection.service.j2"
     dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ changedetection_identifier }}.service"
     mode: "0644"
+  register: changedetection_systemd_service_result
 
 - name: Ensure Changedetection.io playwright-driver systemd service is present
   when: changedetection_playwright_driver_enabled | bool
@@ -145,3 +148,17 @@
     src: "{{ role_path }}/templates/systemd/changedetection-playwright-driver.service.j2"
     dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ changedetection_playwright_driver_identifier }}.service"
     mode: "0644"
+  register: changedetection_playwright_driver_systemd_service_result
+
+- name: Determine whether changedetection needs a restart
+  ansible.builtin.set_fact:
+    changedetection_restart_necessary: >-
+      {{
+        changedetection_support_files_result.changed | default(false)
+        or changedetection_systemd_service_result.changed | default(false)
+        or changedetection_container_image_pull_result.changed | default(false)
+        or changedetection_container_image_build_result.changed | default(false)
+        or changedetection_playwright_driver_support_files_result.changed | default(false)
+        or changedetection_playwright_driver_systemd_service_result.changed | default(false)
+        or changedetection_playwright_driver_container_image_pull_result.changed | default(false)
+      }}
